redwood with tags and navs

--- a/docs/themes/redwood/assets/sass/uk/_hooks.scss
+++ b/docs/themes/redwood/assets/sass/uk/_hooks.scss
@@ -3,16 +3,23 @@
  * The Universal Permissive License (UPL), Version 1.0
  */
 
- @mixin hook-base-code() {
-   padding: 2px 6px;
-   background: rgba($o-beige, 0.4);
-   border-radius: 2px;
-   font-style: normal;
- }
+@mixin hook-base-code() {
+  padding: 2px 6px;
+  background: rgba($o-beige, 0.4);
+  border-radius: 2px;
+  font-style: normal;
+}
 
- @mixin hook-base-blockquote() {
+@mixin hook-base-blockquote() {
   color: $global-muted-color;
   li & {
     margin: $global-small-margin 0 !important;
   }
- }
+}
+
+@mixin hook-label() {
+  &:hover {
+    color: $label-color;
+    text-decoration: none;
+  }
+}
