--- a/docs/themes/redwood/layouts/partials/footer.html
+++ b/docs/themes/redwood/layouts/partials/footer.html
@@ -1,4 +1,51 @@
+{{ $currentNode := . }}
 <footer>
-  
+    <!-- Navigation chevrons -->
+    {{$showPrevNext := (and (not .Params.disableNextPrev) (not .Site.Params.disableNextPrev))}}
+    {{if $showPrevNext}}
+      {{ template "menu-pagination" dict "menu" .Site.Home "currentnode" $currentNode }}
+      <div class="uk-grid uk-flex-between">
+      {{with ($.Scratch.Get "prevPage")}}
+        <div>
+          <a class="uk-slidenav-large" uk-slidenav-previous
+            href="{{.RelPermalink}}" title="{{.Title}}"></a>
+        </div>
+      {{end}}
+      {{with ($.Scratch.Get "nextPage")}}
+        <div>
+          <a class="uk-slidenav-large" uk-slidenav-next
+          href="{{.RelPermalink}}" title="{{.Title}}"></a>
+        </div>
+      {{end}}
+      </div>
+    {{end}}
   {{ partial "custom-footer.html" . }}
 </footer>
+
+{{ define "menu-pagination" }}
+{{$currentNode := .currentnode }}
+{{ if ne .menu.Params.hidden true}}
+  {{if hasPrefix $currentNode.RelPermalink .menu.RelPermalink }}
+    {{ $currentNode.Scratch.Set "NextPageOK" "OK" }}
+    {{ $currentNode.Scratch.Set "prevPage" ($currentNode.Scratch.Get "prevPageTmp") }}
+  {{else}}
+    {{if eq ($currentNode.Scratch.Get "NextPageOK") "OK"}}
+      {{ $currentNode.Scratch.Set "NextPageOK" nil }}
+      {{ $currentNode.Scratch.Set "nextPage" .menu }}
+    {{end}}
+  {{end}}
+
+  {{ $currentNode.Scratch.Set "prevPageTmp" .menu }}
+  {{ $currentNode.Scratch.Set "pages" .menu.Pages }}
+  {{ if .menu.IsHome}}
+    {{ $currentNode.Scratch.Set "pages" .menu.Sections }}
+  {{ else if .menu.Sections}}
+    {{ $currentNode.Scratch.Set "pages" (.menu.Pages | union .menu.Sections) }}
+  {{end}}
+
+  {{ $pages := ($currentNode.Scratch.Get "pages") }}
+  {{ range $pages.ByWeight  }}
+    {{ template "menu-pagination" dict "menu" . "currentnode" $currentNode }}
+  {{end}}
+{{ end }}
+{{ end }}
