--- a/docs/themes/redwood/layouts/partials/header.html
+++ b/docs/themes/redwood/layouts/partials/header.html
@@ -1,14 +1,20 @@
 <header>
-  {{ partial "tags.html" . }}
+  {{$crumbs := (and (not .Params.disableBreadcrumb) (not .Site.Params.disableBreadcrumb))}}
+  {{if $crumbs}}
+    <ul class="uk-breadcrumb uk-margin-top uk-margin-remove-bottom">
+    {{ template "breadcrumb" dict "page" . "value" (printf "<li>%s</li>" .Title) "level" 0 }}
+    </ul>
+  {{- end -}}
 </header>
 
 <!-- templates -->
 {{ define "breadcrumb" }}
-{{$parent := .page.Parent }}
-{{ if $parent }}
-  {{ $value := (printf "<a href='%s'>%s</a> > %s" $parent.RelPermalink $parent.Title .value) }}
-  {{ template "breadcrumb" dict "page" $parent "value" $value }} 
-{{ else }}
+{{- $parent := .page.Parent -}}
+{{- if $parent -}}
+  {{- $title :=  or (and $parent.IsHome (T "home")) $parent.Title -}}
+  {{- $value := (printf "<li><a href='%s'>%s</a></li> %s" $parent.RelPermalink $title .value) }}
+  {{ template "breadcrumb" dict "page" $parent "value" $value "level" (add .level 1) }} 
+{{- else if (and .value .level) -}}
   {{ .value | safeHTML }}
-{{ end }}
-{{ end }}
+{{- end -}}
+{{- end -}}
