--- a/docs/themes/redwood/layouts/partials/toc.html
+++ b/docs/themes/redwood/layouts/partials/toc.html
@@ -3,6 +3,7 @@
 <div class="uk-flex-last uk-width-1-4 uk-visible@l">
   <aside id="toc-nav" uk-sticky="offset: 40">
     {{ .TableOfContents }}
+    {{ partial "tags.html" . }}
   </aside>
 </div>
 {{ end }}
