--- a/docs/themes/redwood/assets/sass/main.scss
+++ b/docs/themes/redwood/assets/sass/main.scss
@@ -48,6 +48,7 @@ h1 {
   }
   @media screen and (min-width: $breakpoint-small) {
     display: block;
+    z-index: $global-z-index + 2;
     .uk-offcanvas-bar {
       left: 0;
       width: 100%;
@@ -77,6 +78,15 @@ h1 {
   .uk-light & {
     display: block;
   }
+}
+
+// Main content
+#content {
+  // for body content overlay of footer
+  position: relative;
+  z-index: $global-z-index + 1;
+  margin-bottom: $global-large-margin;
+  
 }
 
 // Navigation
@@ -168,7 +178,7 @@ pre {
   a.copier {
     display: none;
     color: $rw-syntax-color;
-    padding: $rw-syntax-padding;
+    padding: $rw-syntax-clipboard-padding;
     background: rgba($rw-syntax-background, 0.5);
     position: absolute;
     top: 0; 
@@ -176,4 +186,16 @@ pre {
   }
   &:hover a.copier { display: block; }
 
+}
+
+// Pagination Nav
+.rw-page-prev, .rw-page-next {
+  display: block;
+  position: fixed;
+  bottom: 0;
+  width: $width-medium-width;
+  &.rw-page-next {
+    text-align: right;
+    right: $global-medium-margin;
+  }
 }
