--- a/docs/themes/redwood/assets/sass/variables.scss
+++ b/docs/themes/redwood/assets/sass/variables.scss
@@ -1,6 +1,10 @@
 @import "uk/config";
 
+// Typography
 $rw-secondary-font-family: "Georgia", serif;
-$rw-syntax-color:       $o-white;
-$rw-syntax-background:  $o-black;
-$rw-syntax-padding:     $padding-small-padding / 2 $padding-small-padding;
+
+// Syntax
+$rw-syntax-color:             $o-white;
+$rw-syntax-background:        $o-black;
+$rw-syntax-padding:           $padding-small-padding / 2 $padding-small-padding;
+$rw-syntax-clipboard-padding: $padding-small-padding / 2;
