--- a/docs/themes/redwood/layouts/partials/_open.html
+++ b/docs/themes/redwood/layouts/partials/_open.html
@@ -7,10 +7,10 @@
 
       <div class="uk-width-expand uk-margin-medium-left uk-margin-remove-left@s">
         <div class="uk-margin-medium-right">
-          <div class="uk-grid" uk-grid>
+          <div id="content" class="uk-grid" uk-grid>
             {{ partial "toc.html" . }}
-            <main class="uk-width-expand uk-margin-medium-bottom">
+            <main class="uk-width-expand">
+              {{ partial "header.html" . }}
               {{if and (not .IsHome) (not .Params.chapter) }}
                 <h1 class="rw-accent">{{ if eq .Kind "taxonomy" }}{{ .Kind }} :: {{ end }}{{ .Title }}</h1>
               {{end}}
-              {{ partial "header.html" . }}
