theme and feature refinements

--- a/docs/themes/redwood/assets/sass/syntax.scss
+++ b/docs/themes/redwood/assets/sass/syntax.scss
@@ -33,7 +33,7 @@ pre, .chroma {
 /* NameFunction */ .chroma .nf { color: $o-slate }
 /* NameNamespace */ .chroma .nn { color: $o-slate; text-decoration: underline }
 /* NameTag */ .chroma .nt { color: $o-green; font-weight: bold }
-/* NameVariable */ .chroma .nv { color: $o-teal }
+/* NameVariable */ .chroma .nv { color: $o-slate }
 /* LiteralString */ .chroma .s { color: $o-orange }
 /* LiteralStringAffix */ .chroma .sa { color: $o-orange }
 /* LiteralStringBacktick */ .chroma .sb { color: $o-orange }
