--- a/docs/themes/redwood/layouts/partials/scripts.html
+++ b/docs/themes/redwood/layouts/partials/scripts.html
@@ -10,7 +10,7 @@
       },
       uikit: {
         '#TableOfContents > ul': ['scrollspyNav', { closest: 'li' }],
-        '#TableOfContents a': ['scroll', { duration: 200 }],
+        //'#TableOfContents a': ['scroll', { duration: 200 }],
       }
     });
   })(window, window.Site = window.Site || {});
