--- a/docs/themes/redwood/assets/sass/main.scss
+++ b/docs/themes/redwood/assets/sass/main.scss
@@ -40,6 +40,30 @@ h1 {
 //   font-family: $rw-secondary-font-family;
 // }
 
+ul > li > ul,
+ul > li > ol,
+ol > li > ol,
+ol > li > ul { margin-bottom: $base-margin-vertical; }
+
+// --------------
+// Extra features
+// --------------
+
+// Theme
+.no-dark {
+  display: block;
+  .uk-light & {
+    display: none;
+  }
+}
+.no-light {
+  display: none;
+  .uk-light & {
+    display: block;
+  }
+}
+
+
 // Side nav
 .rw-sidebar {
   border-right: $global-border-width solid transparent;
@@ -58,25 +82,6 @@ h1 {
   // hidden spacer
   + * {
     margin-left: $global-gutter;
-  }
-
-}
-
-// --------------
-// Extra features
-// --------------
-
-// Theme
-.no-dark {
-  display: block;
-  .uk-light & {
-    display: none;
-  }
-}
-.no-light {
-  display: none;
-  .uk-light & {
-    display: block;
   }
 }
 
@@ -147,7 +152,6 @@ h1 {
   white-space: nowrap!important;
 }
 
-
 // Search
 .rw-search-dropdown {
   .highlight {
@@ -198,4 +202,30 @@ pre {
     text-align: right;
     right: $global-medium-margin;
   }
+}
+
+// Fixed aspect ratio
+.rw-aspect {
+  position: relative;
+  &:before {
+    content: "";
+    display: block;
+    width: 100%; 
+  }
+  > * {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    max-width: 100% !important;
+    max-height: 100% !important;
+    width: 100%;
+    height: 100%;
+  }
+  &.rw-aspect-1-1 { padding-top: 100%; }
+  &.rw-aspect-3-2 { padding-top: 66.66%; }
+  &.rw-aspect-4-3 { padding-top: 75%; }
+  &.rw-aspect-16-9 { padding-top: 56.25%; }
+  &.rw-aspect-2-1 { padding-top: 50%; }
 }
