--- a/docs/themes/redwood/layouts/partials/footer.html
+++ b/docs/themes/redwood/layouts/partials/footer.html
@@ -1,12 +1,12 @@
 {{ $currentNode := . }}
 <footer>
     <!-- Navigation chevrons -->
-    {{$showPrevNext := (and (not .Params.disableBackNext) (not .Site.Params.disableBackNext))}}
+    {{$showPrevNext := (and (or .IsHome .IsPage .IsSection) (not .Params.disablePrevNext) (not .Site.Params.disablePrevNext))}}
     {{if $showPrevNext}}
       {{- $iconRatio := "2.5" -}}
       {{ template "menu-pagination" dict "menu" .Site.Home "currentnode" $currentNode }}
       <div class="uk-text-small">
-      {{- if not .Params.disableBack -}}
+      {{- if not (or .IsSection .Params.disableBack) -}}
         {{- with ($.Scratch.Get "prevPage") }}
         <a href="{{ .RelPermalink }}" title="{{ .Title }}" class="rw-page-prev uk-flex uk-flex-left uk-flex-middle uk-text-truncate">
           <span uk-icon="icon: chevron-left; ratio: {{ $iconRatio }}" class="uk-margin-small-right uk-flex-none"></span>
