--- a/docs/themes/redwood/layouts/partials/toc.html
+++ b/docs/themes/redwood/layouts/partials/toc.html
@@ -1,8 +1,9 @@
-{{ $toc := (and (not .Params.disableToc) (not .Params.chapter) (not .IsHome)) }}
-{{ if $toc }}
+{{ $showToc := (and (not .Params.disableToc) (not .Params.chapter) (not .IsHome)) }}
+{{ if $showToc }}
 <div class="uk-flex-last uk-width-1-4 uk-visible@l">
   <aside id="toc-nav" uk-sticky="offset: 40">
     {{ .TableOfContents }}
+    <hr/>
     {{ partial "tags.html" . }}
   </aside>
 </div>
