--- a/docs/themes/redwood/assets/sass/variables.scss
+++ b/docs/themes/redwood/assets/sass/variables.scss
@@ -1,5 +1,8 @@
 @import "uk/config";
 
+// Z
+$rw-main-zindex: $global-z-index - 500;
+
 // Typography
 $rw-secondary-font-family: "Georgia", serif;
 
