--- a/docs/themes/redwood/assets/sass/uk/_hooks.scss
+++ b/docs/themes/redwood/assets/sass/uk/_hooks.scss
@@ -3,6 +3,7 @@
  * The Universal Permissive License (UPL), Version 1.0
  */
 
+// Code
 @mixin hook-base-pre() {
 
 }
@@ -14,6 +15,7 @@
   font-style: normal;
 }
 
+// Blockquote
 @mixin hook-base-blockquote() {
   color: $global-muted-color;
   * + & {
@@ -24,6 +26,7 @@
   }
 }
 
+// Label
 @mixin hook-label() {
   &:hover {
     color: $label-color;
@@ -31,8 +34,49 @@
   }
 }
 
+// Alert
 @mixin hook-alert() {
   a {
     color: $global-emphasis-color;
+  }
+}
+
+// Tabs
+$tab-border-width: 4 * $global-border-width;
+$tab-border-color: rgba($global-muted-color, 0.3) !default;
+
+@mixin hook-tab() {
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: $global-small-margin;
+    right: 0;
+    border-bottom: $tab-border-width solid $tab-border-color;
+  }
+}
+@mixin hook-tab-item() {
+  border-bottom: $tab-border-width solid transparent;
+}
+@mixin hook-tab-item-active() {
+  border-bottom-color: $global-primary-background;
+}
+
+@mixin hook-tab-left() {
+  &:before {
+    top: 0;
+    bottom: 0;
+    left: auto;
+    right: 0;
+    border-right: $tab-border-width solid $tab-border-color;
+    border-bottom: none;
+  }
+  > * > a {
+    border-right: $tab-border-width solid transparent;
+    border-bottom: none;
+  }
+  > .uk-active > a {
+    border-right-color: $global-primary-background;
   }
 }
