--- a/docs/themes/redwood/assets/sass/uk/_settings.scss
+++ b/docs/themes/redwood/assets/sass/uk/_settings.scss
@@ -85,6 +85,7 @@ $navbar-nav-item-color:           $global-inverse-color;
 $inverse-navbar-nav-item-color:   $global-inverse-color;
 
 // Nav
+$nav-primary-item-font-size:              1.3rem;
 $inverse-nav-primary-item-color:          $inverse-global-muted-color;
 $inverse-nav-primary-item-hover-color:    $inverse-global-color;
 $inverse-nav-primary-item-active-color:   $inverse-global-emphasis-color;
