--- a/docs/themes/redwood/layouts/shortcodes/alert.html
+++ b/docs/themes/redwood/layouts/shortcodes/alert.html
@@ -5,5 +5,5 @@
   {{- if $icon -}}
   <span uk-icon="icon: {{ $icon }}; ratio: 1.2" class="uk-margin-small-right uk-flex-none"></span>
   {{- end }}
-  <div>{{ .Inner }}</div>
+  <div class="uk-width-expand">{{ .Inner }}</div>
 </div>
