--- a/docs/themes/redwood/assets/sass/main.scss
+++ b/docs/themes/redwood/assets/sass/main.scss
@@ -222,10 +222,23 @@ pre {
     max-height: 100% !important;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
   }
   &.rw-aspect-1-1 { padding-top: 100%; }
   &.rw-aspect-3-2 { padding-top: 66.66%; }
   &.rw-aspect-4-3 { padding-top: 75%; }
   &.rw-aspect-16-9 { padding-top: 56.25%; }
   &.rw-aspect-2-1 { padding-top: 50%; }
+}
+
+// Mermaid
+.mermaid {
+  .edgeLabel {
+    background-color: $global-background !important;
+  }
+  .uk-light & {
+    .edgeLabel {
+      background-color: $global-secondary-background !important;
+    }
+  }
 }
