--- a/docs/themes/redwood/layouts/partials/meta.html
+++ b/docs/themes/redwood/layouts/partials/meta.html
@@ -1,5 +1,6 @@
 <meta name="application-name" content="{{ .Site.Title }}"/>
 <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
+<meta name="keywords" content="{{ delimit (.Keywords | default .Site.Params.keywords) "," }}">
 <!-- og tags -->
 <meta property="og:title" content="{{ .Site.Title }} - {{ .Page.Title }}" />
 <meta property="og:type" content="website" />
