--- a/docs/themes/redwood/layouts/shortcodes/aspect.html
+++ b/docs/themes/redwood/layouts/shortcodes/aspect.html
@@ -1,4 +1,3 @@
-{{- $ratio := .Get "ratio" -}}
-<div class="rw-aspect rw-aspect-{{ $ratio }}">
-  {{ .Inner }}
+<div class="rw-aspect rw-aspect-{{ .Get "ratio" }} {{with .Get "class"}}{{ . }}{{ end }}">
+  {{- .Inner -}}
 </div>
