--- a/docs/themes/redwood/layouts/shortcodes/width.html
+++ b/docs/themes/redwood/layouts/shortcodes/width.html
@@ -1,3 +1,4 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
-
-<div class="uk-margin-auto uk-width-1-1 uk-width-{{ .Get 0 }}@s">{{ .Inner }}</div>
+{{- $w := .Get 0 -}}
+{{- $bp := .Get 1 | default "s" -}}
+<div class="uk-margin-auto uk-width-1-1 uk-width-{{ $w }}@{{ $bp }}">{{ .Inner }}</div>
