--- a/docs/themes/redwood/assets/sass/uk/_hooks.scss
+++ b/docs/themes/redwood/assets/sass/uk/_hooks.scss
@@ -39,6 +39,11 @@
   a {
     color: $global-emphasis-color;
   }
+  em {
+    color: inherit;
+    font-weight: 400;
+    opacity: 0.7;
+  }
 }
 
 // Tabs
