--- a/docs/themes/redwood/layouts/shortcodes/alert.html
+++ b/docs/themes/redwood/layouts/shortcodes/alert.html
@@ -1,9 +1,6 @@
-{{ $_hugo_config := `{ "version": 1 }` }}
-{{- $type := .Get "style" | default "primary" -}}
-{{- $icon := .Get "icon" -}}
-<div uk-alert class="uk-alert-{{ $type }} uk-grid uk-grid-collapse uk-flex-nowrap">
-  {{- if $icon -}}
-  <span uk-icon="icon: {{ $icon }}; ratio: 1.2" class="uk-margin-small-right uk-flex-none"></span>
-  {{- end }}
-  <div class="uk-width-expand">{{ .Inner }}</div>
+<div uk-alert class="uk-alert-{{ .Get "style" | default "primary" }} uk-grid uk-grid-collapse uk-flex-nowrap">
+  {{- with .Get "icon" -}}<span uk-icon="icon: {{ . }}; ratio: 1.2" class="uk-margin-small-right uk-flex-none"></span>{{- end -}}
+  {{- with . -}}<div class="uk-width-expand">
+    {{ .Inner -}}
+  </div>{{- end -}}
 </div>
