--- a/docs/themes/redwood/assets/sass/uk/_hooks.scss
+++ b/docs/themes/redwood/assets/sass/uk/_hooks.scss
@@ -8,6 +8,9 @@
   .uk-background-muted {
     color: $global-color;
   }
+  .uk-background-secondary .uk-background-secondary {
+    background: $inverse-global-muted-background;
+  }
 }
 
 // Code
