--- a/docs/themes/redwood/layouts/partials/scripts.html
+++ b/docs/themes/redwood/layouts/partials/scripts.html
@@ -9,7 +9,7 @@
         '#TableOfContents > ul ul': 'uk-nav-sub',
       },
       uikit: {
-        '#TableOfContents > ul': ['scrollspyNav', { closest: 'li' }],
+        '#TableOfContents > ul': ['scrollspyNav', { closest: 'li', offset: 10 }],
         //'#TableOfContents a': ['scroll', { duration: 200 }],
       }
     });
