--- a/docs/themes/redwood/layouts/shortcodes/grid.html
+++ b/docs/themes/redwood/layouts/shortcodes/grid.html
@@ -1,6 +1,5 @@
-{{ $_hugo_config := `{ "version": 1 }` }}
-{{- $options := .Get "options" }}
-{{- $class := .Get "class" }}
+{{- $options := .Get "options" -}}
+{{- $class := .Get "class" -}}
 {{- $gutter := .Get "gutter" | default "small" -}}
 {{- $width := .Get "col" -}}
 {{- $bp := .Get "breakpoint" | default "m" -}}
@@ -11,10 +10,10 @@
 {{- $content := trim (.Inner | markdownify) "\n " -}}
 {{- $classes := printf "uk-grid uk-grid-%s %s %s %s %s" $gutter $class $widths $horizontal $vertical -}}
 
-{{ if hasPrefix $content "<ul>" }}
-  {{ $content | replaceRE "^<ul>" (printf `<ul uk-grid="%s" class="%s">` $options $classes) | safeHTML }}
+{{- if hasPrefix $content "<ul>" -}}
+  {{- $content | replaceRE "^<ul>" (printf `<ul uk-grid="%s" class="%s">` $options $classes) | safeHTML -}}
 {{- else -}}
   <div uk-grid="{{- $options -}}" class="{{- $classes -}}">
-    {{ $content | safeHTML }}
+    {{- $content | safeHTML -}}
   </div>
 {{- end -}}
