--- a/src/docs/themes/redwood/layouts/partials/_close.html
+++ b/src/docs/themes/redwood/layouts/partials/_close.html
@@ -1,10 +1,10 @@
 
             </main>
-          </div> <!-- close body grid -->
-          {{ partial "footer.html" . }}
-        </div> <!-- close body wrapper -->
+          </div> <!-- close #content grid -->
+        </div> <!-- close content-container -->
       </div> <!-- close body -->
     </div> <!-- close main grid -->
+    {{ partial "footer.html" . }}
     {{ partial "scripts.html" . }}
   </body>
 </html>
