--- a/src/docs/themes/redwood/layouts/shortcodes/switcher.html
+++ b/src/docs/themes/redwood/layouts/shortcodes/switcher.html
@@ -1,16 +1,18 @@
-{{- $params := .Params -}}
 {{- $uid := index (shuffle (seq 0 300)) 0 -}}
+{{- $left := .Get "left" -}}
 {{- $content := .Inner | markdownify -}}
 
-<div uk-grid class="uk-margin-bottom">
-  <div class="uk-width-auto@m">
-    <ul class="uk-tab-left uk-text-large" uk-tab="connect: #switcher-{{ $uid }}">
-      {{- range $params -}}
+<div uk-grid class="uk-margin-bottom uk-grid-small {{ .Get "class" }}">
+  <div class="uk-width-1-1 {{ with $left }}uk-width-auto@m{{ end }}">
+    <ul class="uk-tab{{ with $left }}-left uk-text-large{{ end }}" uk-tab="connect: #switcher-{{ $uid }}">
+      {{- with .Get "tabs" -}}
+      {{- range (split . "|") -}}
       <li><a href="#">{{ . }}</a></li>
+      {{- end -}}
       {{- end -}}
     </ul>
   </div>
-  <div class="uk-width-expand@m">
+  <div class="{{ with $left }}uk-width-expand@m{{ end }}">
     {{ trim $content "\n " | replaceRE "^<ul>" (printf "<ul id='switcher-%d' class='uk-switcher'>" $uid) | safeHTML }}
   </div>
 </div>
