--- a/src/docs/themes/redwood/assets/sass/main.scss
+++ b/src/docs/themes/redwood/assets/sass/main.scss
@@ -6,6 +6,7 @@
 @import "uk/uikit"; // Customized uikit
 @import "syntax";   // chroma
 @import "variables";
+@import "mixins";
 
 // Main
 main { 
@@ -67,7 +68,7 @@ ol > li > ul { margin-bottom: $base-margin-vertical; }
 .rw-sidebar {
   border-right: $global-border-width solid transparent;
   .uk-light & {
-    border-right: $global-border-width solid darken($o-darktheme-bg, 10%);
+    border-right-color: $inverse-global-border;
   }
   @media screen and (min-width: $breakpoint-small) {
     display: block;
@@ -78,21 +79,42 @@ ol > li > ul { margin-bottom: $base-margin-vertical; }
       transform: none;
     }
   }
-  // hidden spacer
-  + * {
-    margin-left: $global-gutter;
-  }
 }
 
 // Main content
+$footer-height: $rw-prevnext-height + $global-margin;
+
+.content-container {
+  z-index: 1;
+  margin-bottom: $footer-height;
+  border-bottom: $global-border-width solid $global-border;
+  .uk-light & {
+    border-bottom-color: $inverse-global-border;
+  }
+  @media (min-width: $breakpoint-small) {
+    margin-left: $rw-content-margin-offset;
+  }
+  > :first-child {
+    @include content-background('../images/cloud.light.png');
+    .uk-light & {
+      @include content-background('../images/cloud.dark.png');
+    }
+  }
+}
 #content {
   // for body content overlay of footer
   position: relative;
   z-index: $rw-main-zindex + 1;
-  padding-bottom: $global-gutter;
-  margin-bottom: $global-large-margin;
-  border-bottom: $global-border-width solid $global-border;
+  @include content-gutters();
+  padding-bottom: $global-gutter !important;
 }
+
+// Footer
+footer {
+  height: $footer-height;
+  @include content-gutters();
+}
+
 
 // Navigation
 .uk-nav {
@@ -195,12 +217,12 @@ pre {
 // Pagination Nav
 .rw-page-prev, .rw-page-next {
   display: block;
-  position: fixed;
-  bottom: 0;
+  // position: absolute;
+  // top: 0;
   width: $width-medium-width;
+  height: $rw-prevnext-height;
   &.rw-page-next {
     text-align: right;
-    right: $global-medium-margin;
   }
 }
 
