--- a/src/docs/themes/redwood/layouts/partials/_open.html
+++ b/src/docs/themes/redwood/layouts/partials/_open.html
@@ -2,14 +2,12 @@
 <html lang="{{ .Page.Language | default "en" }}">
   {{ partial "head.html" . }}
   <body class="" data-url="{{ .RelPermalink }}">
-    
-      {{ partial "menu.html" . }}
-
-      <div class="uk-width-expand uk-margin-medium-left uk-margin-remove-left@s">
-        <div class="uk-margin-medium-right">
-          <div id="content" class="uk-grid" uk-grid>
-            {{ partial "toc.html" . }}
-            <main class="uk-width-expand">
-              {{ partial "header.html" . }}
-              <h1 class="rw-accent">{{ .Title }}</h1>
+    {{ partial "menu.html" . }}
+    <div class="content-container uk-width-expand">
+      <div class="uk-position-relative">
+        <div id="content" class="uk-grid uk-container-xlarge" uk-grid>
+          {{ partial "toc.html" . }}
+          <main class="uk-width-expand">
+            {{ partial "header.html" . }}
+            <h1 class="rw-accent">{{ .Title }}</h1>
               
