Adding Reviews Feature to MuShop

--- a/src/storefront/src/templates/data/_data.pug
+++ b/src/storefront/src/templates/data/_data.pug
@@ -84,7 +84,11 @@
   }, {
     name: 'Contact',
     href: 'contacts.html'
-  }]
+  },
+  {
+    name: 'Reviews',
+    href: 'reviews.html'
+   }]
 
   var footerMenuLeft = [{
     name: 'Catalog',
