changes to display the review feature only with MuShop beta

--- a/src/storefront/src/templates/views/productCard.pug
+++ b/src/storefront/src/templates/views/productCard.pug
@@ -67,14 +67,14 @@ div.tm-product-card-body
           +icon("heart", ".75")
           span.tm-product-card-action-text Add to favorites
       
-      div.uk-text-meta.tm-product-card-actions
-          a.tm-product-card-action.tm-action-button-active(
-          title="Ratings")          
-          +icon("star")
-          +icon("star")
-          +icon("star")
-          +icon("star")
-          +icon("star")
+      //div.uk-text-meta.tm-product-card-actions
+      //    a.tm-product-card-action.tm-action-button-active(
+      //    title="Ratings")          
+      //    +icon("star")
+      //    +icon("star")
+      //    +icon("star")
+      //    +icon("star")
+      //    +icon("star")
 
       //- Add to cart
       button.uk-button.uk-button-primary.tm-product-card-add-button.tm-shine.js-add-to-cart(
