--- a/src/docs/themes/redwood/layouts/partials/menu.html
+++ b/src/docs/themes/redwood/layouts/partials/menu.html
@@ -90,7 +90,7 @@
 {{ define "tree-nav" }}
 {{ $currentNode := .currentnode }}
 {{ with .sect }}
-  {{ if and .IsSection ((not .Params.hidden) or $.showhidden) }}
+  {{ if and .IsSection (or (not .Params.hidden) $.showhidden) }}
   {{ $numberOfPages := (add (len .Pages) (len .Sections)) }}
   {{ $isParent := gt $numberOfPages 0 }}
   <li data-nav-id="{{ .RelPermalink }}" title="{{ .Title }}" class="
