change moniker to A-Team Alumni

--- a/src/storefront/src/templates/partials/_footer.pug
+++ b/src/storefront/src/templates/partials/_footer.pug
@@ -62,7 +62,7 @@ section.uk-section.uk-section-secondary.uk-section-xsmall.uk-light
         div.uk-margin-small.uk-text-muted.uk-text-small
           |Made with
           +icon('heart', '0.75')(class="uk-margin-xsmall-left uk-margin-xsmall-right")
-          |by Oracle
+          |by Oracle A-Team Alumni
           
 
     
