optional border css for switcher

--- a/src/docs/themes/redwood/assets/sass/main.scss
+++ b/src/docs/themes/redwood/assets/sass/main.scss
@@ -264,3 +264,9 @@ pre {
     }
   }
 }
+
+// Switcher (a.k.a simple tabs) Border
+.switcher-border
+{
+    border: 4px solid rgba(121,114,109,.3);
+}
