--- a/src/storefront/src/templates/partials/_head.pug
+++ b/src/storefront/src/templates/partials/_head.pug
@@ -1,9 +1,19 @@
 //-
- Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ Copyright © 2019-2021 Oracle and/or its affiliates. All rights reserved.
  The Universal Permissive License (UPL), Version 1.0
  
-meta(charset="UTF-8")
-meta(http-equiv="x-ua-compatible" content="ie=edge")
-meta(name="viewport" content="width=device-width, initial-scale=1")
+meta( charset="UTF-8" )
+meta( http-equiv="x-ua-compatible" content="ie=edge" )
+meta( name="viewport" content="width=device-width, initial-scale=1" )
+meta( name="apple-mobile-web-app-title" content="MuShop" )
+meta( name="application-name" content="MuShop" )
+meta( name="msapplication-TileColor" content="#c74634" )
+meta( name="theme-color" content="#ffffff" )
+link( rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2" )
+link( rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2" )
+link( rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2" )
+link( rel="manifest" href="/site.webmanifest?v=2" )
+link( rel="mask-icon" href="/safari-pinned-tab.svg?v=2" color="#c74634" )
+link( rel="shortcut icon" href="/favicon.ico?v=2" )
 if page.title
   title= page.title
