--- a/src/storefront/src/templates/layouts/_index.pug
+++ b/src/storefront/src/templates/layouts/_index.pug
@@ -1,5 +1,5 @@
 //-
- Copyright © 2019, Oracle and/or its affiliates. All rights reserved.
+ Copyright © 2019, 2022, Oracle and/or its affiliates. All rights reserved.
  The Universal Permissive License (UPL), Version 1.0
  
 include ../data/_data
@@ -25,6 +25,7 @@ html(lang="en")
     link(rel="stylesheet" href="styles/shop.css")
     //- uikit scripts
     script(src="scripts/uikit.js")
+    include /partials/_head-extras
 
   body
     div#app.uk-offcanvas-content
