--- a/src/storefront/src/templates/partials/_head-extras.pug
+++ b/src/storefront/src/templates/partials/_head-extras.pug
@@ -2,8 +2,5 @@
  Copyright © 2022 Oracle and/or its affiliates. All rights reserved.
  The Universal Permissive License (UPL), Version 1.0
 
-//
-   head placeholder 1 
-
-//
-   head placeholder 2 
+// head placeholder 1 
+// head placeholder 2 
